--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   backend:
     build: ./backend
@@ -14,21 +13,8 @@ services:
       - 8.8.8.8   # Google's public DNS
       - 1.1.1.1   # Cloudflare's DNS
 
-    # depends_on:
-    #   - db
-
-  # db:
-  #   image: mongo:latest
-  #   container_name: mongodb
-  #   restart: always
-  #   volumes:
-  #     - mongo_data:/data/db
-  #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: root
-  #     MONGO_INITDB_ROOT_PASSWORD: password
-
   nginx:
-    build: ./nginx
+    build: ./nginx      # Points to Dockerfile in ./nginx/
     container_name: nginx_proxy
     restart: always
     ports:
