--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,23 +1,36 @@
+# default.conf
+
+# 1. Redirect all HTTP requests to HTTPS
+server {
+    listen 80;
+    server_name 192.168.2.239;
+
+    # Redirect to the same host on HTTPS
+    return 301 https://$host$request_uri;
+}
+
+# 2. Actual HTTPS server block
 server {
     listen 443 ssl;
-    server_name 192.168.2.239; # Replace with your internal VM IP
+    server_name 192.168.2.239;  # Use your IP or domain name here
 
-    ssl_certificate /etc/nginx/ssl/beyou.crt;
+    # SSL certificate files
+    ssl_certificate     /etc/nginx/ssl/beyou.crt;
     ssl_certificate_key /etc/nginx/ssl/beyou.key;
 
+    # (Optional) Basic security best practices for SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # 3. Proxy requests to the Django backend service
     location / {
-        proxy_pass http://127.0.0.1:8000; # Adjust based on your backend
+        proxy_pass http://backend:8000;
+        
+        #(Optional) Pass along real IP info and host headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
-# Redirect HTTP to HTTPS
-server {
-    listen 80;
-    server_name 192.168.2.239;
-    return 301 https://$server_name$request_uri;
-}
-
