--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,15 @@ services:
       - ./backend:/app
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     environment:
       - PYTHONUNBUFFERED=1
       - DB_HOST=db  
       - DB_NAME=beyouDB
       - DB_USER=godsknights 
-      - DB_PASSWORD=JaiHind&1950
+      - DB_PASSWORD=JaiHind&1950 
+      - SECRET_KEY=django-insecure-hs88%e(wz^$8%b#jh=9)q9#k!cimzggveahcw5#l72%1sfv6#x
     depends_on:
       db:
         condition: service_healthy
