--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,3 @@
-# default.conf
-
 # 1. Redirect all HTTP requests to HTTPS
 server {
     listen 80;
@@ -23,11 +21,25 @@ server {
     ssl_prefer_server_ciphers on;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
+    # ✅ Serve STATIC files (like admin CSS, JS, your static/)
+    location /static/ {
+        alias /app/static/;  # Make sure this matches your Django STATIC_ROOT
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
+    # ✅ Serve MEDIA files if any (profile pics, uploads, etc.)
+    location /media/ {
+        alias /app/media/;  # Only if you use MEDIA_ROOT
+        expires 30d;
+        add_header Cache-Control "public";
+    }
+
     # 3. Proxy requests to the Django backend service
     location / {
         proxy_pass http://backend:8000;
-        
-        #(Optional) Pass along real IP info and host headers
+
+        # Pass along real IP info and host headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
