--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     restart: always
     volumes:
       - ./backend:/app
+      - static_volume:/app/static
+      - media_volume:/app/media
     ports:
       - "8000:8000"
     env_file:
@@ -56,6 +58,9 @@ services:
     build: ./nginx
     container_name: nginx_proxy
     restart: always
+    volumes:
+      - static_volume:/app/static
+      - media_volume:/app/media
     ports:
       - "80:80"
       - "443:443"
