--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -28,12 +28,12 @@ server {
         add_header Cache-Control "public";
     }
 
-    # ✅ Serve MEDIA files if any (profile pics, uploads, etc.)
-    location /media/ {
-        alias /app/media/;  # Only if you use MEDIA_ROOT
-        expires 30d;
-        add_header Cache-Control "public";
-    }
+    # # ✅ Serve MEDIA files if any (profile pics, uploads, etc.)
+    # location /media/ {
+    #     alias /app/media/;  # Only if you use MEDIA_ROOT
+    #     expires 30d;
+    #     add_header Cache-Control "public";
+    # }
 
     # 3. Proxy requests to the Django backend service
     location / {
