--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -70,14 +70,22 @@ server {
     location /login/ {
         limit_req zone=req_limit_login burst=2 nodelay;
         proxy_pass http://backend:8000;
-        include /etc/nginx/proxy_params;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
+
 
     # General site rate limit
     location / {
         limit_req zone=req_limit_per_ip burst=10 nodelay;
         proxy_pass http://backend:8000;
-        include /etc/nginx/proxy_params;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Handle errors with friendly pages
